Bug #35378: set server/role before starting USS / added missing dependency
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52238 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -62,6 +62,7 @@ Depends: ${misc:Depends},
  univention-network-common,
  univention-management-console-module-appcenter,
  x11-utils,
+ x11-xkb-utils,
  openbox,
 Recommends: iceweasel | firefox-en | firefox-de | firefox,
  xinit,
