univention-doc (2.0.0-1) unstable; urgency=medium
  * Update to UCS 4.0 (Bug #35267)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52254 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-doc/debian/control
+++ b/base/univention-doc/debian/control
@@ -4,10 +4,11 @@ Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.5
 Build-Depends: debhelper, univention-config-dev, ucslint-univention
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-doc
 Architecture: all
-Depends: python2.6, python-sphinx, ${misc:Depends}
+Depends: python2.7, python-sphinx, ${misc:Depends}
 Description: tool to build source documentation
  This package contains scripts and configurations for HTML and PDF documentations build from our sources.
  .
