--- a/base/univention-heimdal/debian/control
+++ b/base/univention-heimdal/debian/control
@@ -6,6 +6,7 @@ Standards-Version: 3.5.2
 Build-Depends: debhelper (>> 7),
  ucslint-univention,
  univention-config-dev
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-heimdal-kdc
 Architecture: all
