--- a/base/univention-heimdal/debian/rules
+++ b/base/univention-heimdal/debian/rules
@@ -3,7 +3,7 @@
 # Univention Heimdal
 #  rules file for the debian package
 #
-# Copyright 2004-2013 Univention GmbH
+# Copyright 2004-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -39,5 +39,5 @@ override_dh_auto_test:
 	dh_auto_test
 
 %:
-	dh $@
+	dh $@ --with python_support
 
