change password in ad member mode (Bug #35467)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52274 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/control
+++ b/services/univention-samba/debian/control
@@ -26,7 +26,7 @@ Depends: ${misc:Depends},
  python-tdb,
  samba-common-bin,
  shell-univention-lib (>= 3.0.26-25),
- python-univention-lib (>= 1.0.45)
+ python-univention-lib (>= 3.0.26-45)
 Conflicts: samba-ad-dc,
  samba-dsdb-modules
 Description: UCS - Samba domain controller
