--- a/doc/errata/staging/2014-07-03-univention-ad-connector.yaml
+++ b/doc/errata/staging/2014-07-03-univention-ad-connector.yaml
@@ -2,13 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-ad-connector
-fix: 8.0.17-14.392.201407140919
+fix: 8.0.17-39.413.201407290824
 version: [2]
 desc: |
   This update fixes the following issues:
   * Support for the ad/member mode has been added.
   * In some cases a removed group membership was not synchronized
-    from OpenLDAP to Samba 4 in write mode.
+    from OpenLDAP to Active Directory in write mode.
   * The AD certificate chain is no longer checked if there is no 
     root certificate configured.
   * Kerberos support has been added to the UCS AD connector.
