--- a/doc/errata/staging/2014-06-19-univention-join.yaml
+++ b/doc/errata/staging/2014-06-19-univention-join.yaml
@@ -2,9 +2,10 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-join
-fix: 6.0.18-7.471.201407251208
+fix: 6.0.18-10.474.201407290943
 version: [2]
 desc: |
-  Support for "UCS as member in an AD Domain" has been added to
-  univention-join.
-bug: [35094,35470]
+  univention-join now checks for the AD member mode during the join.
+  If the domain is in the AD member mode, univention-join configures 
+  the local system as part of the AD domain.
+bug: [35094,35470,35446]
