--- a/services/univention-ad-connector/debian/rules
+++ b/services/univention-ad-connector/debian/rules
@@ -64,6 +64,7 @@ override_dh_installinit:
 override_dh_fixperms:
 	dh_fixperms -X/var/www/univention-ad-connector
 	chmod 755 debian/univention-ad-connector/usr/share/univention-ad-connector/scripts/prepare-new-instance
+	chmod 755 debian/univention-ad-connector/usr/share/univention-ad-connector/scripts/well-known-sid-object-rename
 	chmod 755 debian/univention-ad-connector/usr/lib/univention-uninstall/19univention-ad-connector.uinst
 	chmod 755 debian/univention-ad-connector/usr/lib/univention-install/81univention-ad-connector.inst
 	chmod 600 $(AD_TOOLS_DEST)/etc/univention/connector/ad/mapping
