added ldap/sasl/secprops/maxssf (Bug #35513)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52334 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/conffiles/etc/ldap/ldap.conf
+++ b/management/univention-ldap/conffiles/etc/ldap/ldap.conf
@@ -17,3 +17,8 @@ BASE	@%@ldap/base@%@
 #SIZELIMIT	12
 #TIMELIMIT	15
 #DEREF		never
+
+@!@
+if 'ldap/sasl/secprops/maxssf' in configRegistry:
+        print 'sasl_secprops_maxssf=%s' % configRegistry['ldap/sasl/secprops/maxssf']
+@!@
