Bug #35090 [WIP]: * integration of connector wizard path * clean up * adaptation of backend method for join into AD
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52341 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/control
+++ b/services/univention-ad-connector/debian/control
@@ -95,7 +95,8 @@ Description: UCS - AD-connector Exchange configuration
 Package: univention-management-console-module-adconnector
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
- univention-management-console-server
+ univention-management-console-server,
+ python-samba
 Description: UMC module for Univention AD Connector
  This package contains the Univention AD Connector UMC module.
  .
