* added python-ipaddr and dnsutils to the     package dependencies (Bug #35520)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52373 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/control
+++ b/base/univention-lib/debian/control
@@ -14,7 +14,9 @@ Depends: ${python:Depends},
  ${misc:Depends},
  python-univention-config-registry (>= 9.0.5-4),
  pwgen,
- python-magic
+ python-magic,
+ python-ipaddr,
+ dnsutils
 Provides: ${python:Provides}
 Description: UCS - common scripting functions for Python scripts
  This package contains Python functions used by various
