--- a/doc/errata/staging/2014-06-13-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-06-13-univention-system-setup.yaml
@@ -19,7 +19,7 @@ desc: |
     output from pipe anymore. Instead, the output is directly written to the log.
     This way, running setup scripts will not terminate when the UMC module process
     does.
-  * Successfull request processing will no longer be reported before the actual
+  * Successful request processing will no longer be reported before the actual
     request processing is done.
   * Added welcome page with instructions to set a root password
     before accessing the setup wizard for EC2 setups
