Bug #33810: merged outstanding YAML changes from ucs-3.2-2 between 20140729-1425 and 20140801-1100 into ucs-3.2-3
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52453 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-07-28-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-07-28-univention-s4-connector.yaml
@@ -2,8 +2,9 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-s4-connector
-fix: 8.0.33-66.491.201407281831
+fix: 8.0.33-69.494.201407301841
 version: [2]
 desc: |
     * The joinscript of univention-s4-connector was adjusted to abort if the domain is in AD member mode.
-bug: [35500]
+    * The command line script univention-ad-takeover has been removed since the UMC module is more recent.
+bug: [35500,35514]
