--- a/doc/errata/staging/2014-07-02-univention-virtual-machine-manager-daemon.yaml
+++ b/doc/errata/staging/2014-07-02-univention-virtual-machine-manager-daemon.yaml
@@ -2,18 +2,10 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-virtual-machine-manager-daemon
-fix: 3.0.17-11.497.201407041252
+fix: 3.0.17-13.500.201408011136
 version: [2]
 desc: |
   This update fixes the following issue:
-  * The list of virtual machines now refreshes automatically in the UMC grid
-    when leaving the detail page of a virtual machine (as actions taken there
-    can influence the state of the machine). Also, the UCR variable
-    uvmm/umc/autosearch now only prevents the very first search on startup;
-    manually clicking on the tree on the left refreshes the list even when
-    autosearch is disabled.
-    Additionally, the grid is updated non-invasively at a configurable
-    interval (new UCR variable uvmm/umc/autoupdate/interval).
   * Paused VMs are now handled more similar to running VMs, which allows, for
     exmaple, VNC to be used for paused VMs, too.
-bug: [35122, 35107]
+bug: [35107]
