added dependency to python-ldb, python-samba and python-ldap (Bug #35520)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52462 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/control
+++ b/base/univention-lib/debian/control
@@ -16,7 +16,10 @@ Depends: ${python:Depends},
  pwgen,
  python-magic,
  python-ipaddr,
- dnsutils
+ dnsutils,
+ python-ldb,
+ python-samba,
+ python-ldap
 Provides: ${python:Provides}
 Description: UCS - common scripting functions for Python scripts
  This package contains Python functions used by various
