* Add dependency on currrent version of python-univention-lib (Bug #35566)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52530 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/control
+++ b/services/univention-ad-connector/debian/control
@@ -96,7 +96,8 @@ Package: univention-management-console-module-adconnector
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
  univention-management-console-server,
- python-samba
+ python-univention-lib (>= 3.0.26-62),
+ python-samba,
 Description: UMC module for Univention AD Connector
  This package contains the Univention AD Connector UMC module.
  .
