* Add log message (Bug #34776) * Catch a sqlite3 exception in case the S4 table is not yet created   (Bug #35346) * Cleanup conflicting GPO directories before the robocopy phase (Bug #34776) * reduce and simplify the patch (Bug #34776) * Fix logic change introduced in last commit (Bug #34776) * Fix two log messages for (Bug #34776) * Work around Bug #35561  (Bug #35346). * Check the return code of the initial run of 96univention-samba.inst   when coming from AD Member mode. Abort if it is not ok and take care   to keep the "AD Member" service signal in that case so the takeover   may be tried again later (Bug #35346). * Intially run 96univention-samba.inst and 97univention-s4-connector.inst   individually when coming from AD Member mode instead of calling a general   run-join-scripts. That should only be done in the end. * Set samba4/ignore/mixsetup=yes when coming from AD Member mode   (Bug #35346) * No need to make a fuss about the first parts of the S4 Connector   joinscript, we simply run it once before samba DC is initialized.   (Bug #35346). * Fix some comments (Bug #35346). * In AD Member mode we need to run the first parts of the S4 Connector   joinscript before starting and waiting for the sync. * In AD Member mode we should let the Samba4 joinscript run to the end   after the initial join (Bug #35346). * Don't run all remaining joinscripts during disable_admember_mode * Don't log the error messages of the initial ntacl sysvolreset (Bug #35346) * set_nameserver1_to_local_default_ip before robocopy and   perform reconfigure_nameserver_for_samba_backend later as usual. * Update translations (Bug #35346). * Set nameserver1 to config_registry.Interfaces().get_default_ip_address()   after initial domain join, instead of reverting to nameserver1/local,   which would be the wrong choice when coming from AD Member (Bug #35346). * perform a reset_sysvol_ntacls before robocopy, required when coming from   AD Member * call revert_connector_settings when coming from AD

--- a/management/univention-management-console-module-adtakeover/debian/control
+++ b/management/univention-management-console-module-adtakeover/debian/control
@@ -14,7 +14,8 @@ Build-Depends: debhelper (>> 7),
 Package: univention-management-console-module-adtakeover
 Architecture: all
 Depends: univention-management-console-server,
- univention-s4-connector
+ univention-s4-connector,
+ python-univention-lib (>= 3.0.26-37)
 Description: UMC module for taking over an AD
  .
  It is part of Univention Corporate Server (UCS), an
