--- a/doc/errata/staging/2014-07-28-syslinux3.yaml
+++ b/doc/errata/staging/2014-07-28-syslinux3.yaml
@@ -5,7 +5,7 @@ src: syslinux3
 fix: 3.71+dfsg-5.1.201407281355
 version: [2]
 desc: |
-  This updates provides the older version 3.72 of syslinux, a boot loader for
+  This update provides the older version 3.72 of syslinux, a boot loader for
   Linux. It is used by the UCS network installer.
   Due to some BIOS incompatibilities the newer syslinux from UCS-3 fails to
   boot some notebooks like the DELL E6510 either locally or via PXE. The older
