--- a/doc/errata/staging/2014-06-18-univention-pkgdb.yaml
+++ b/doc/errata/staging/2014-06-18-univention-pkgdb.yaml
@@ -7,5 +7,6 @@ version: [2]
 desc: |
   When the initilization of the univention-pkgdb UMC module, or any
   command execution, fails because the PostgreSQL is not running,
-  a user friendly error message will be shown instead of debug information in a feedback dialog.
+  a user friendly error message will be shown instead of debug
+  information in a feedback dialog.
 bug: [34723]
