reformat advisory (Bug #34776, #35346)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52610 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-07-28-univention-management-console-module-adtakeover.yaml
+++ b/doc/errata/staging/2014-07-28-univention-management-console-module-adtakeover.yaml
@@ -5,7 +5,9 @@ src: univention-management-console-module-adtakeover
 fix: 1.0.10-47.45.201408061736
 version: [2]
 desc: |
-    * The UMC module for AD Takeover has been adjusted to fix a case where the path to one of the
-      two default GPOs did not match the actual folder copied from the Windows AD server.
-    * The UMC module for AD Takeover has been adjusted to support UCS domains in AD member mode.
+    * The UMC module for AD Takeover has been adjusted to fix a case where the
+      path to one of the two default GPOs did not match the actual folder copied
+      from the Windows AD server.
+    * The UMC module for AD Takeover has been adjusted to support UCS domains
+      in AD member mode.
 bug: [34776, 35346]
