reformat advisory (Bug #35252)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52616 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-07-28-univention-samba4.yaml
+++ b/doc/errata/staging/2014-07-28-univention-samba4.yaml
@@ -5,5 +5,6 @@ src: univention-samba4
 fix: 3.0.39-32.585.201407281655
 version: [2]
 desc: |
-    * The joinscript of univention-samba4 was adjusted to abort if the domain is in AD member mode.
+    * The joinscript of univention-samba4 was adjusted to abort if the domain
+      is in AD member mode.
 bug: [35252]
