reformat advisory (Bug #35500, #35514)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52617 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-07-28-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-07-28-univention-s4-connector.yaml
@@ -5,6 +5,8 @@ src: univention-s4-connector
 fix: 8.0.33-69.494.201407301841
 version: [2]
 desc: |
-    * The joinscript of univention-s4-connector was adjusted to abort if the domain is in AD member mode.
-    * The command line script univention-ad-takeover has been removed since the UMC module is more recent.
+    * The joinscript of univention-s4-connector was adjusted to abort if the
+      domain is in AD member mode.
+    * The command line script univention-ad-takeover has been removed since
+      the UMC module is more recent.
 bug: [35500,35514]
