Bug #35378: install system setup via preseed in base-installer
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52629 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/di-univention-system-setup/debian/control
+++ b/base/di-univention-system-setup/debian/control
@@ -6,10 +6,10 @@ Build-Depends: debhelper (>= 9),
  po-debconf (>= 0.5.0)
 
 Package: di-univention-system-setup
-Architecture: i386 amd64
+Architecture: all
 XB-Subarchitecture: ${subarch}
 Provides: configured-ucs
 Depends: cdebconf-udeb, kernel-installer, di-utils, installed-base, created-fstab, bootable-system
 XB-Installer-Menu-Item: 7650
 Package-Type: udeb
-Description: Install Univention System Setup on disk
+Description: Start Univention System Setup
