Bug #35584: small fix
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52636 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-08-08-univention-samba.yaml
+++ b/doc/errata/staging/2014-08-08-univention-samba.yaml
@@ -5,6 +5,6 @@ src: univention-samba
 fix: 8.0.19-11.477.201408081022
 version: [2]
 desc: |
-    * Missing initialization of the samba role UCR variable
+    * Missing initialization of the UCR variable samba/role
       has been added to the postinst script of univention-samba.
 bug: [35584]
