--- a/doc/errata/staging/2014-08-14-univention-management-console-module-udm.yaml
+++ b/doc/errata/staging/2014-08-14-univention-management-console-module-udm.yaml
@@ -5,5 +5,6 @@ src: univention-management-console-module-udm
 fix: 4.0.99-1.469.201408141149
 version: [3]
 desc: |
-  This update fixes displaying issues in UMC if AD member mode is not used.
+  This update fixes some displaying issues in UMC related to the new
+  AD member mode.
 bug: [35610]
