--- a/base/univention-passwd-cache/nss_passwdcache/Makefile
+++ b/base/univention-passwd-cache/nss_passwdcache/Makefile
@@ -1,7 +1,7 @@
 all:	libnss_passwdcache.so.2
 
 libnss_passwdcache.so.2:	nss_passwdcache.o
-	gcc -shared -o libnss_passwdcache.so.2 -Wl,soname,libnss_passwdcache.so.2 nss_passwdcache.o
+	gcc -shared -o libnss_passwdcache.so.2 -Wl,-soname,libnss_passwdcache.so.2 nss_passwdcache.o
 
 %.o:	%.c
 	gcc -fPIC -Wall -D_GNU_SOURCE -c $<
