Update to UCS 4.0 (Bug #35144)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52782 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/control
+++ b/management/univention-directory-listener/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>> 7),
  libssl-dev,
  libldap2-dev,
  libdb3-dev,
- python2.6-dev,
+ python2.7-dev,
  libunivention-debug-dev (>= 0.8),
  libunivention-config-dev,
  libunivention-policy-dev,
@@ -21,8 +21,8 @@ Depends: ${misc:Depends}, ${shlibs:Depends},
  univention-base-files,
  shell-univention-lib (>= 1.0.6),
  univention-runit,
- python2.6-univention | python2.6-univention-2005,
- python2.6-univention-debug,
+ python2.7-univention,
+ python2.7-univention-debug,
  python-univention-lib (>= 1.0.25-1)
 Conflicts: univention-ldap-listener (<< 2.2.2)
 Description: UCS - Directory Listener
