* Adjusted dependencies to updated Samba 4.2 Debian packages (Bug #35319)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52784 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/control
+++ b/services/univention-samba4/debian/control
@@ -18,11 +18,8 @@ Depends: ${misc:Depends},
  shell-univention-lib (>= 3.0.22-1),
  python-univention-lib (>= 1.0.45),
  python-univention (>= 6.0.9-3),
- samba (>= 4.1),
- samba-ad-dc,
- samba4 (>= 4.1),
- samba4-clients,
- samba-dsdb-modules,
+ samba (>= 4.2),
+ samba-vfs-modules,
  ldb-tools,
  winbind,
  univention-samba-local-config,
