--- a/base/univention-ipcalc/debian/control
+++ b/base/univention-ipcalc/debian/control
@@ -6,6 +6,7 @@ Standards-Version: 3.5.2
 Build-Depends: debhelper,
  ucslint-univention,
  python-ipaddr,
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-ipcalc
 Architecture: all
