--- a/management/univention-directory-listener/debian/control
+++ b/management/univention-directory-listener/debian/control
@@ -2,7 +2,7 @@ Source: univention-directory-listener
 Section: univention
 Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.5
-Build-Depends: debhelper (>> 7),
+Build-Depends: debhelper (>= 9),
  ucslint-univention,
  libssl-dev,
  libldap2-dev,
