--- a/management/univention-directory-notifier/debian/control
+++ b/management/univention-directory-notifier/debian/control
@@ -2,7 +2,7 @@ Source: univention-directory-notifier
 Section: univention
 Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.5
-Build-Depends: debhelper (>> 7),
+Build-Depends: debhelper (>= 9),
  libssl-dev,
  libunivention-debug-dev,
  libunivention-config-dev,
