--- a/management/univention-directory-reports/debian/control
+++ b/management/univention-directory-reports/debian/control
@@ -2,12 +2,13 @@ Source: univention-directory-reports
 Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
-Standards-Version: 3.5.5
-Build-Depends: debhelper (>> 7),
+Standards-Version: 3.8.2
+Build-Depends: debhelper (>= 9),
  ucslint-univention,
- python2.6-dev,
  python-support,
+ python-all,
  univention-config-dev
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-directory-reports
 Architecture: all
