--- a/management/univention-directory-reports/debian/rules
+++ b/management/univention-directory-reports/debian/rules
@@ -3,7 +3,7 @@
 # Univention Directory Reports
 #  rules file for the debian package
 #
-# Copyright 2007-2013 Univention GmbH
+# Copyright 2007-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -61,6 +61,4 @@ override_dh_auto_install:
 	done
 
 %:
-	dh $@
-
-
+	dh $@ --with 'python_support'
