added univention-ipcalc to dependencies in univention-management-console-module-setup (Bug #35144)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52813 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -90,7 +90,8 @@ Depends: univention-management-console-server,
  python-simplejson,
  python-dnspython,
  python-psutil,
- python-apt
+ python-apt,
+ univention-ipcalc
 Description: UMC module for Univention system setup
  This package contains the UMC module for the UCS System Setup.
  .
