--- a/services/univention-pkgdb/debian/control
+++ b/services/univention-pkgdb/debian/control
@@ -10,6 +10,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-all,
  ucslint-univention
 Standards-Version: 3.8.2
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-pkgdb
 Architecture: all
