--- a/doc/errata/staging/2014-08-12-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-08-12-univention-s4-connector.yaml
@@ -2,8 +2,10 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-s4-connector
-fix: 8.0.33-70.495.201408121732
+fix: 8.0.33-71.496.201408191201
 version: [2,3]
 desc: |
     * Fix a traceback due to an undefined variable in the password synchronization module
-bug: [33263]
+    * The SID synchroniation from OpenLDAP to Samba 4 has been fixed. This is
+      used in UCS@school environments.
+bug: [33263,35626]
