Adapted XS-Python-Version (Bug #35265)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52857 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/control
+++ b/nagios/univention-nagios/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-support,
  ucslint-univention
 Standards-Version: 3.8.2
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-nagios-server
 Architecture: any
