* Use python support (Bug #35144)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52868 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/control
+++ b/management/univention-directory-listener/debian/control
@@ -7,12 +7,13 @@ Build-Depends: debhelper (>= 9),
  libssl-dev,
  libldap2-dev,
  libdb3-dev,
- python2.7-dev,
+ python-all-dev,
  libunivention-debug-dev (>= 0.8),
  libunivention-config-dev,
  libunivention-policy-dev,
  univention-config-dev,
  libunivention-policy-dev
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-directory-listener
 Architecture: any
