* samba-tool is in samba-common-bin since some time (Bug #35320)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52870 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/control
+++ b/services/univention-s4-connector/debian/control
@@ -34,7 +34,7 @@ Depends: ${misc:Depends},
  python-univention-connector-s4 (= ${binary:Version}),
  shell-univention-lib (>= 3.0.26-25),
  python-univention-lib (>= 3.0.26-7),
- samba4-clients,
+ samba-common-bin,
  univention-samba4 (>= 2.0.44-3),
  attr,
  univention-directory-manager-tools (>> 7.0.251-1),
