Bug #35525 maint: Prefer univention-mail-posfix as default-mta
Otherwise a random other MTA is chosen.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52874 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-maintenance/debian/control
+++ b/base/univention-maintenance/debian/control
@@ -15,7 +15,7 @@ Depends: ${misc:Depends},
  nmap,
  mrtg,
  netcat,
- mail-transport-agent,
+ univention-mail-postfix | mail-transport-agent,
  cron,
  univention-config-registry,
  python-univention-lib (>= 1.0.25-1)
