univention-mail-postfix (9.0.0-1) unstable; urgency=medium
  * Update to UCS 4.0 (Bug #35264)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52892 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/control
+++ b/mail/univention-mail-postfix/debian/control
@@ -23,6 +23,7 @@ Conflicts: univention-mail,
  exim4-config,
  univention-mail-postfix-kolab2
 Replaces: univention-mail-postfix-forward (<< 6.0)
+Provides: default-mta
 Breaks: univention-mail-postfix-forward (<< 6.0)
 Description: UCS - postfix configuration
  This package contains a basic configuration for the postfix
