Adapted the ucr templates (Bug #35265)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52898 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/conffiles/etc/nagios3/apache2.conf
+++ b/nagios/univention-nagios/conffiles/etc/nagios3/apache2.conf
@@ -25,7 +25,7 @@ else:
 <DirectoryMatch (/usr/share/nagios3/htdocs|/usr/share/nagios3/htdocs-nuvola|/usr/lib/cgi-bin/nagios3)>
 	Options FollowSymLinks
 
-	DirectoryIndex index.html
+	DirectoryIndex index.html index.php
 
 	AllowOverride AuthConfig
 	Order Allow,Deny
@@ -44,4 +44,6 @@ if baseConfig.has_key('nagios/server/authenticate') and baseConfig['nagios/serve
 @!@
 </DirectoryMatch>
 
-
+<Directory /usr/share/nagios3/htdocs>
+	Options	+ExecCGI	
+</Directory>
