--- a/nagios/univention-nagios/conffiles/etc/nagios3/nagios.cfg
+++ b/nagios/univention-nagios/conffiles/etc/nagios3/nagios.cfg
@@ -532,7 +532,7 @@ retain_state_information=1
 # service state information before it shuts down.  The state 
 # information in this file is also read immediately prior to
 # starting to monitor the network when Nagios is restarted.
-# This file is used only if the preserve_state_information
+# This file is used only if the retain_state_information
 # variable is set to 1.
 
 state_retention_file=/var/lib/nagios3/retention.dat
@@ -796,6 +796,22 @@ check_service_freshness=1
 # disabled service freshness checking, this option has no effect.
 
 service_freshness_check_interval=60
+
+
+
+# SERVICE CHECK TIMEOUT STATE
+# This setting determines the state Nagios will report when a
+# service check times out - that is does not respond within
+# service_check_timeout seconds.  This can be useful if a
+# machine is running at too high a load and you do not want
+# to consider a failed service check to be critical (the default).
+# Valid settings are:
+# c - Critical (default)
+# u - Unknown
+# w - Warning
+# o - OK
+
+service_check_timeout_state=c
 
 
 
