--- a/nagios/univention-nagios-smart/debian/rules
+++ b/nagios/univention-nagios-smart/debian/rules
@@ -40,7 +40,7 @@ override_dh_auto_install:
 	univention-install-config-registry-info
 
 override_dh_fixperms:
-	dh_fixperms -X
+	dh_fixperms
 	chmod 0755 debian/univention-nagios-smart/usr/lib/nagios/plugins/check_smart.pl
 	chmod 4755 debian/univention-nagios-smart/usr/lib/nagios/plugins/check_smart_suidwrapper
 
