reformat advisory (Bug #33263, #35626)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52908 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-08-12-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-08-12-univention-s4-connector.yaml
@@ -5,7 +5,8 @@ src: univention-s4-connector
 fix: 8.0.33-72.497.201408191526
 version: [2,3]
 desc: |
-    * Fix a traceback due to an undefined variable in the password synchronization module
-    * The SID synchroniation from OpenLDAP to Samba 4 has been fixed. This is
-      used in UCS@school environments.
+  * Fix a traceback due to an undefined variable in the password
+    synchronization module
+  * The SID synchroniation from OpenLDAP to Samba 4 has been fixed. This is
+    used in UCS@school environments.
 bug: [33263,35626]
