--- a/test/ucs-test/debian/rules
+++ b/test/ucs-test/debian/rules
@@ -33,7 +33,7 @@
 export DH_ALWAYS_EXCLUDE=.svn
 
 %:
-	dh $@
+	dh $@ --with python_support
 
 override_dh_install:
 	dh_install --sourcedir=$(CURDIR)
