Adapted amis for Jenkins jobs for UCS 4 (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52929 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-107-app-member-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-107-app-member-s4.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-107-member-s4.log
 
-# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 3 - ami-9f30f0e8
-ec2_ami: ami-9f30f0e8
+# AMI: Univention Corporate Server (UCS) 4.0 (test image) - ami-beda04c9
+ec2_ami: ami-beda04c9
 
 # EC2 region
 ec2_region: eu-west-1
@@ -99,7 +99,7 @@ command6:
 command7:
  halt -p
 files:
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+# ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
  ~/ec2/license/license.secret /etc/
 
