--- a/test/ucs-ec2-tools/examples/jenkins/autotest-073-update-3.2-to-4.0-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-073-update-3.2-to-4.0-backup-s4.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-073-backup-s4.log
 
-# AMI: Univention Corporate Server (UCS) 3.1 (official image) rev. 5 (ami-24f0fa50)
-ec2_ami: ami-24f0fa50
+# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 4 - ami-3c34e84b
+ec2_ami: ami-3c34e84b
 
 # EC2 region
 ec2_region: eu-west-1
