--- a/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-100-master-s3.log
 
-# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 3 - ami-9f30f0e8
-ec2_ami: ami-9f30f0e8
+# AMI: Univention Corporate Server (UCS) 4.0 (test image) - ami-beda04c9
+ec2_ami: ami-beda04c9
 
 # EC2 region
 ec2_region: eu-west-1
@@ -64,7 +64,7 @@ command6:
  halt -p
 files:
  ~/ec2/license/autotest100.ldif /root/
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+#~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
  ~/ec2/license/license.secret /etc/
 
