--- a/test/ucs-ec2-tools/examples/jenkins/autotest-114-update-3.2-to-4.0-appupdate-slave-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-114-update-3.2-to-4.0-appupdate-slave-s3.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-114-slave-s3.log
 
-# EC2 regionMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 3 - ami-9f30f0e8
-ec2_ami: ami-9f30f0e8
+# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 4 - ami-3c34e84b
+ec2_ami: ami-3c34e84b
 
 ec2_region: eu-west-1
 
@@ -106,5 +106,5 @@ command8:
 command9:
  halt -p
 files:
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+# ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
