--- a/test/ucs-ec2-tools/examples/jenkins/autotest-123-appupdate-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-123-appupdate-backup-s4.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-123-backup-s4.log
 
-# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 3 - ami-9f30f0e8
-ec2_ami: ami-9f30f0e8
+# AMI: Univention Corporate Server (UCS) 4.0 (test image) - ami-beda04c9
+ec2_ami: ami-beda04c9
 
 # EC2 region
 ec2_region: eu-west-1
@@ -107,7 +107,7 @@ command7:
 command8:
  halt -p
 files:
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+# ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
  ~/ec2/license/license.secret /etc/
 
