* Migrated ucs-test-tools to UCS-4.0-0 (Bug #35664)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52942 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test-tools/debian/control
+++ b/test/ucs-test-tools/debian/control
@@ -6,6 +6,7 @@ Standards-Version: 3.5.5
 Build-Depends: debhelper (>> 7),
  ucslint-univention,
  univention-config-dev
+XS-Python-Version: 2.6, 2.7
 
 Package: ucs-test-tools
 Architecture: all
