--- a/test/ucs-windows-tools/debian/control
+++ b/test/ucs-windows-tools/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 7),
  python-support (>= 0.90),
  univention-config-dev,
  ucslint-univention
+XS-Python-Version: 2.6, 2.7
 
 Package: ucs-windows-tools
 Architecture: all
