* Migrated univention-demo-configuration to UCS-4.0-0 (Bug #35664)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52946 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/debian/control
+++ b/test/univention-demo-configuration/debian/control
@@ -6,6 +6,7 @@ Standards-Version: 3.8.2
 Build-Depends: debhelper (>= 7.0.50~),
  ucslint-univention,
  univention-config-dev
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-demo-configuration
 Architecture: all
