--- a/test/univention-demo-configuration/debian/rules
+++ b/test/univention-demo-configuration/debian/rules
@@ -3,7 +3,7 @@
 # restricted configuration for demo.univention.de
 #  debian/rules file
 #
-# Copyright 2012-2013 Univention GmbH
+# Copyright 2012-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -46,4 +46,4 @@ override_dh_installinit:
 	dh_installinit --no-start
 
 %:
-	dh $@
+	dh $@ --with python_support
