* Migrated winexe to UCS-4.0-0 (Bug #35664)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52948 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/winexe/debian/control
+++ b/test/winexe/debian/control
@@ -20,6 +20,7 @@ Build-Depends: debhelper,
  mingw32-runtime,
  mingw-w64,
  python
+XS-Python-Version: 2.6, 2.7
 
 Package: winexe
 Architecture: any
