--- a/test/ucs-ec2-tools/examples/jenkins/autotest-096-member-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-096-member-s3.cfg
@@ -40,12 +40,14 @@ profile:
  locale/default="de_DE.UTF-8:UTF-8"
  packages_install="univention-samba"
  packages_remove=""
+ server/role="domaincontroller_master"
 command1:
  . utils.sh; basic_setup
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
 # . utils.sh; upgrade_to_latest_test_errata
+ echo >/etc/apt/sources.list
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest096.ldif
